--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,13 +1,9 @@
 dependencies:
 - role: andrewrothstein.unarchive-deps
-  version: v1.1.5
-- openjdk_app: jre
-  role: andrewrothstein.openjdk
-  version: v2.0.8
+  version: v1.0.0
 galaxy_info:
-  author: Andrew Rothstein
-  company: BlackRock
-  description: Installs keycloak
+  author: Javier Peralta
+  description: Installs keycloak using system java
   galaxy_tags:
   - sso
   - secret
@@ -16,9 +12,6 @@ galaxy_info:
   - MIT
   min_ansible_version: 2.0
   platforms:
-  - name: Archlinux
-    versions:
-    - all
   - name: Debian
     versions:
     - buster
@@ -27,15 +20,3 @@ galaxy_info:
     versions:
     - 7
     - 8
-  - name: Fedora
-    versions:
-    - 31
-    - 32
-  - name: Gentoo
-    versions:
-    - all
-  - name: Ubuntu
-    versions:
-    - bionic
-    - focal
-    - xenial
